<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/description_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center"
        android:textSize="17sp"
        app:lineHeight="22sp"
        android:textColor="@color/black"
        android:text="@string/dialog_create_description_text"
        />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/app_name_title_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/description_text_view"
        android:gravity="center"
        android:textSize="14sp"
        app:lineHeight="22sp"
        android:textColor="@color/dim_gray"
        android:text="@string/app_name_label_text"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/app_name_text_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_title_text_view"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:errorIconTint="@android:color/holo_red_light"
        app:errorTextColor="@android:color/holo_red_light"
        app:hintAnimationEnabled="false"
        app:hintEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/app_name_edit_text"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="@drawable/edit_text_background"
            android:inputType="textPersonName"
            android:maxLength="100"
            android:paddingStart="16dp"
            android:paddingTop="10dp"
            android:paddingEnd="16dp"
            android:textColor="@color/black"
            android:textColorHint="@color/black"
            android:textCursorDrawable="@null"
            android:textSize="16sp"
            app:lineHeight="22sp"
            />

    </com.google.android.material.textfield.TextInputLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/file_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name_text_input_layout">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/choose_file_button"
            android:layout_width="150dp"
            android:layout_height="40dp"
            android:textColor="@color/white"
            android:textAllCaps="false"
            android:foreground="?attr/selectableItemBackground"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:text="@string/choose_file_button_text"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/chosen_file_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:maxWidth="180dp"
            android:maxLines="1"
            android:ellipsize="start"
            android:textColor="@color/dim_gray"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@id/choose_file_button"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/create_app_button"
        android:layout_width="0dp"
        android:layout_height="40dp"
        android:layout_marginTop="30dp"
        android:background="@color/purple_500"
        android:textColor="@color/white"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/file_layout"
        android:foreground="?attr/selectableItemBackground"
        android:textAllCaps="false"
        android:text="@string/create_app_button_text"
        />

</androidx.constraintlayout.widget.ConstraintLayout>